create arabic style and trans lang en and ar

--- a/frontend/src/assets/locales/ar/trans.json
+++ b/frontend/src/assets/locales/ar/trans.json
@@ -1,5 +1,75 @@
 {
-    "test" : " اهلا ومرحبا",
+    "company_name" : "اي دي تك",
     "home" : "الرئيسية",
-    "about" : "من نحن"
+    "about" : "من نحن",
+    "about_us" : "من نحن",
+    "Service" : "خدماتنا",
+    "project" : "أعمالنا",
+    "our_project" : "أعمالنا",
+    "team" : "فريقنا",
+    "Contact" : "تواصل معنا",
+    "main_header" :"تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
+    "main_paragraph" :"تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
+    "about_header" : "أفضل شركة اي دي تك مع 10 سنوات من الخبرة",
+    "about_paragraph" : "تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
+    "about_h6_sc1": "الحائز على جائزة",
+    "about_h6_sc2": "الطاقم المحترف",
+    "about_h6_sc3": "خدمة 24 ساعة 7 ايام عمل",
+    "about_h6_sc4": "أسعار تنافسبة",
+    "about_button": "اقرأ المزيد",
+
+    "newsletter_header": "على استعداد للبدء",
+    "newsletter_paragraph": "يمكنك طرق بريدك الإلكتروني وسوف يتواصل معك احد المتخصصين.",
+    "enter_email" : "إدخل بريدك الإلكتروني",
+
+    "services_main_paragraph" : "What Solutions We Provide",
+    "services_sc1_header" : "تصميم المواقع الإلكترونية",
+    "services_sc1_p" : "موقعك الإلكتروني هو أفضل من يتحدث عنك ويشرح أفكارك ويطرح منتجاتك. لكن حتى يحدث هذا، يجب أن يكون تصميم موقعك الإلكتروني جذاباً وسلساً في التعامل.",
+    "services_sc2_header" : "برمجة تطبيقات الهاتف ",
+    "services_sc2_p" : "تعزز تطبيقات الهاتف وصولك لعملائك بشكل أعمق ، لاسيما وأن الهواتف المحمولة باتت أقرب لأصحابها من أفراد عائلاتهم، حسبما تؤكد الدراسات السوقية الحديثة.",
+    "services_sc3_header" : "إدارة مواقع التواصل الاجتماعي",
+    "services_sc3_p" : "التواصل الفعال بين الشركة وجمهورها هو أساس نجاح التسويق وخاصة الإلكتروني. وتعتبر السوشيال ميديا وسيلة ترويجية خارقة لقدرتها على الوصول إلى أعداد غير محدودة من البشر .",
+    "services_sc4_header" : "تهيئة الموقع في محركات البحث",
+    "services_sc4_p" : "تجهيز المواقع حتى تكون متناسبة مع محركات البحث بحيث تظهر هذه المواقع بمرور الوقت واستمرار العمل عليها في النتائج الأولى من صفحات محركات البحث .",
+    "services_sc5_header" : "تصميم الهوية التجارية للشركات",
+    "services_sc5_p" : "هوية الشركة هي شخصيتها، وكلما امتلكت المؤسسة هوية مميزة كلما كانت أكثر قدرة على النجاح والتفوق على منافسيها ونيل ثقة وإعجاب أعداد أكبر من جمهورها المستهدف.",
+    "services_sc6_header" : "أستضافة المواقع الالكترونية",
+    "services_sc6_p" : "تقدم أي دي تك العديد من خدمات استضافة المواقع باعلى تقنيات وبأفضل الاسعار فنحن نقدم مجموعه من خطط استضافه المواقع المشتركه",
+
+    "project_paragraph" : "المشاريع التي تم إطلاقها مؤخرًا",
+    "project_All" : "الكل ",
+    "project_Design" : "تصميم",
+    "project_Development" : "تطوير",
+    "project_p1_type" : "مواقع ويب",
+    "project_p1_name" : "اسم المشروع",
+
+
+
+    "Our_Clients" : "آراء العملاء",
+    "Our_Clients_paragraph1" : "تحقق مما ",
+    "Our_Clients_paragraph2" : "تقول العملاء حول",
+    "Our_Clients_paragraph3" : " تطوير التطبيقات لدينا",
+    "Our_Clients_client1" : "ديفيد مارتن",
+    "Our_Clients_client1_App_name" : "التطبيقات المالية",
+    "Our_Clients_client2" : "جاك هاري",
+    "Our_Clients_client2_App_name" : "الأعمال الرقمية",
+    "Our_Clients_op_text" : "من خلال الموقع الإلكتروني الذي أنشأته شركة اي دي تك ، تم تسويق شركتنا بطريقة أفضل ، وتقديم خدماتنا والوصول إلى جميع عملائنا بسهولة, شكرا جزيلا اي دي تك للمساعدة في بناء موقع الكتروني ساعد في الدعاية لأكادميتنا والوصول إلى عملائنا وتمكينهم من الوصول إلينا بسهولة.",
+
+    "our_team" : "فريقنا",
+    "our_team_meet" : "تعرف على أعضاء فريقنا",
+    "programmer1" : "احمد تواب",
+    "programmer1_job" : "مدير",
+    "programmer2" : "ضياء",
+    "programmer2_job" : "مبرمج فرنت اند",
+    "programmer3" : "ضياء",
+    "programmer3_job" : "مصمم",
+
+    "footer_1_h5": "ابقي علي تواصل معنا",
+    "footer_1_p_address": "21 ش عبد السلام عارف متفرع من 26 يوليو",
+    "footer_1_p_phone": " +201011401555 ",
+    "footer_1_p_email": "info@ADtech.com",
+    "footer_2_h5": "صفحات الموقع",
+    "footer_3_h5": "معرض المشاريع",
+    "footer_4_h5": "كن معنا علي تواصل مستمر",
+    "footer_4_p": "شكرا جزيلا اي دي تك للمساعدة في بناء موقع الكتروني ساعد في الدعاية لأكادميتنا والوصول إلى عملائنا وتمكينهم من الوصول إلينا بسهولة."
 }
