--- a/frontend/src/assets/locales/en/trans.json
+++ b/frontend/src/assets/locales/en/trans.json
@@ -1,5 +1,76 @@
 {
-    "test" : " hello world",
+    "company_name" : "AD Tech",
     "home" : "Home",
-    "about" : "About"
+    "about" : "About",
+    "about_us" : "About Us",
+    "Service" : "Service",
+    "project" : "project",
+    "our_project" : "Our Projects",
+    "team" : "team",
+    "Contact" : "Contact",
+    "main_header" : "All in one SEO tool need to grow your business rapidly",
+    "main_paragraph" :"Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem",
+
+    "about_header" : "The best SEO solution with 10 years of experience",
+    "about_paragraph" : "Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet",
+    "about_h6_sc1": "Award Winning",
+    "about_h6_sc2": "Professional Staff",
+    "about_h6_sc3": "24/7 Support",
+    "about_h6_sc4": "Fair Prices",
+    "about_button": "Read More",
+
+    "newsletter_header": "Ready to get started",
+    "newsletter_paragraph": "Diam elitr est dolore at sanctus nonumy.",
+    "enter_email" : "Enter Your Email",
+
+    "services_main_paragraph" : "What Solutions We Provide",
+    "services_sc1_header" : "SEO Optimization",
+    "services_sc1_p" : "Erat ipsum justo amet d ",
+    "services_sc2_header" : "Web Design",
+    "services_sc2_p" : "Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.",
+    "services_sc3_header" : "Social Media Marketing",
+    "services_sc3_p" : "Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.",
+    "services_sc4_header" : "Email Marketing",
+    "services_sc4_p" : "Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.",
+    "services_sc5_header" : "PPC Advertising",
+    "services_sc5_p" : "Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.",
+    "services_sc6_header" : "App Development",
+    "services_sc6_p" : "Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.",
+
+    "project_paragraph" : "Recently Launched Projects",
+    "project_All" : "All",
+    "project_Design" : "Design",
+    "project_Development" : "Development",
+    "project_p1_type" : "Web Design",
+    "project_p1_name" : "Project Name",
+
+    "Our_Clients" : "Our Clients",
+    "Our_Clients_paragraph1" : "Check What ",
+    "Our_Clients_paragraph2" : " The Clients Say",
+    "Our_Clients_paragraph3" : " About Our App Dev",
+    "Our_Clients_client1" : "David Martino Co",
+    "Our_Clients_client1_App_name" : "Financial Apps",
+    "Our_Clients_client2" : "Jake Harris Nyo",
+    "Our_Clients_client2_App_name" : "Digital Business",
+    "Our_Clients_op_text" : "Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte kengan lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.",
+
+    "our_team" : "Our Team",
+    "our_team_meet" : "Meet Our Team Members",
+    "programmer1" : "Ahmed Tawab",
+    "programmer1_job" : "Manager",
+    "programmer2" : "Diaa",
+    "programmer2_job" : "Front End",
+    "programmer3" : "Diaa",
+    "programmer3_job" : "Front End",
+
+    "footer_1_h5": "Get In Touch",
+    "footer_1_p_address": "123 Street, New York, USA",
+    "footer_1_p_phone": "+012 345 67890",
+    "footer_1_p_email": "info@example.com",
+    "footer_2_h5": "Popular Link",
+    "footer_3_h5": "Project Gallery",
+    "footer_4_h5": "Newsletter",
+    "footer_4_p": "Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eismod tempor idunte kengan lorem ipsum dolor sit amet, consectetur picing elit massive big blasta."
+
+
 }
