complate (ar,en) trans

--- a/frontend/src/assets/locales/ar/trans.json
+++ b/frontend/src/assets/locales/ar/trans.json
@@ -9,6 +9,7 @@
     "team" : "فريقنا",
     "Contact" : "تواصل معنا",
     "main_header" :"تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
+
     "main_paragraph" :"تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
     "about_header" : "أفضل شركة اي دي تك مع 10 سنوات من الخبرة",
     "about_paragraph" : "تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات ",
@@ -18,11 +19,21 @@
     "about_h6_sc4": "أسعار تنافسبة",
     "about_button": "اقرأ المزيد",
 
+    "about2_header1" : "عن ",
+    "about2_header2" : "ما نقوم به نحن",
+    "about2_header3" : " ومن نحن",
+    "about2_paragraph" : "تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات",
+    "about2_h4_sc1": "صيانة البرمجيات المقامة بالفعل",
+    "about2_h4_sc2": "حل المشكلات",
+    "about2_h4_sc3": "خدمة 24 ساعة 7 ايام عمل",
+    "about2_h4_sc4": "تطوير اعمال الشركة",
+    "about2_paragraph2": "تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات . تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات تقدم شركة اي دي تك أفضل الحلول والعروض المتاحة لـ تصميم المواقع وبرمجة التطبيقات",
+
     "newsletter_header": "على استعداد للبدء",
-    "newsletter_paragraph": "يمكنك طرق بريدك الإلكتروني وسوف يتواصل معك احد المتخصصين.",
+    "newsletter_paragraph": "يمكنك أن تضع بريدك الإلكتروني وسوف يتواصل معك احد المتخصصين.",
     "enter_email" : "إدخل بريدك الإلكتروني",
 
-    "services_main_paragraph" : "What Solutions We Provide",
+    "services_main_paragraph" : "ما هي الحلول التي نقدمها",
     "services_sc1_header" : "تصميم المواقع الإلكترونية",
     "services_sc1_p" : "موقعك الإلكتروني هو أفضل من يتحدث عنك ويشرح أفكارك ويطرح منتجاتك. لكن حتى يحدث هذا، يجب أن يكون تصميم موقعك الإلكتروني جذاباً وسلساً في التعامل.",
     "services_sc2_header" : "برمجة تطبيقات الهاتف ",
@@ -71,5 +82,19 @@
     "footer_2_h5": "صفحات الموقع",
     "footer_3_h5": "معرض المشاريع",
     "footer_4_h5": "كن معنا علي تواصل مستمر",
-    "footer_4_p": "شكرا جزيلا اي دي تك للمساعدة في بناء موقع الكتروني ساعد في الدعاية لأكادميتنا والوصول إلى عملائنا وتمكينهم من الوصول إلينا بسهولة."
+    "footer_4_p": "شكرا جزيلا اي دي تك للمساعدة في بناء موقع الكتروني ساعد في الدعاية لأكادميتنا والوصول إلى عملائنا وتمكينهم من الوصول إلينا بسهولة.",
+
+    "search_placeholder": "البحث .....",
+    "not_found" : "الصفحة غير موجودة",
+    "not_found_p" : "عذرًا، الصفحة التي بحثت عنها غير موجودة في موقعنا! ربما تذهب إلى صفحتنا الرئيسية .",
+    "not_found_button" : "اذهب الي الصفحة الرئيسية",
+
+    "contact_p" : "الاتصال للحصول على أي استفسار",
+    "contact_name" : "اسمك",
+    "contact_Email" : "البريد الإلكتروني",
+    "contact_Subject" : "الموضوع",
+    "contact_Message" : "الرسالة",
+    "contact_Message_placeholder" : "نص الرسالة",
+    "contact_SMessage" : "إرسل"
+
 }
