--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -7,7 +7,7 @@
     "project" : "project",
     "our_project" : "Our Projects",
     "team" : "team",
-    "Contact" : "Contact",
+    "Contact" : "Contact Us",
     "main_header" : "All in one SEO tool need to grow your business rapidly",
     "main_paragraph" :"Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem",
 
